fix: 修复 Set.of() Java 8 兼容性问题
- CopyPlugin: 使用 Collections.unmodifiableSet(new HashSet<>(Arrays.asList(...)))
- NeteasePlugin: 使用 Collections.singleton()
- 现完全兼容 JDK 8